[package]
edition = "2018"
name = "mio"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create git tag
version       = "0.7.0"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "Lightweight non-blocking IO"
documentation = "https://docs.rs/mio/0.7.0"
homepage      = "https://github.com/tokio-rs/mio"
repository    = "https://github.com/tokio-rs/mio"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
exclude       = [
  ".gitignore",
  ".travis.yml",
]
publish = false

[features]
default = []
os-poll = []
os-util = []
tcp = []
udp = []
uds = []
extra-docs = []

[dependencies]
log = { git = "https://github.com/mesalock-linux/log-sgx" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dev-dependencies]
env_logger = { version = "0.6.2", default-features = false }
net2       = "0.2.33"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["os-poll", "os-util", "tcp", "udp", "uds"]

[[example]]
name = "tcp_server"
required-features = ["os-poll", "tcp"]

[[example]]
name = "udp_server"
required-features = ["os-poll", "udp"]
